Changing encoding of readers to iso

--- a/Testando adicionar módulo de features acústicas.ipynb
+++ b/Testando adicionar módulo de features acústicas.ipynb
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1165,11 +1165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = './experiments/debug_prosodic_linear/config.json'\n",
+    "config_path = './experiments/debug_prosodic_linear/config_3feats.json'\n",
     "experiment_folder = './experiments/debug_prosodic_features/'\n",
     "c = load_config(config_path)\n",
     "\n",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1256,55 +1256,75 @@
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0001.wav',\n",
        "  'rosana',\n",
        "  'neutral',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['my name is lucas',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0002.wav',\n",
        "  'marco',\n",
        "  'neutral',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['and yours?',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav',\n",
        "  'rosana',\n",
        "  'neutral',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['my name is jessica',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0004.wav',\n",
        "  'marco',\n",
        "  'neutral',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['how are you doing?',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0005.wav',\n",
        "  'rosana',\n",
        "  'happy',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['fine and you?',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0006.wav',\n",
        "  'marco',\n",
        "  'happy',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['the same',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0007.wav',\n",
        "  'rosana',\n",
        "  'happy',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['wanna hangout some day?',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0008.wav',\n",
        "  'marco',\n",
        "  'happy',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['yes of course',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0009.wav',\n",
        "  'rosana',\n",
        "  'happy',\n",
-       "  1.0],\n",
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22],\n",
        " ['ok, see ya',\n",
        "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0010.wav',\n",
        "  'marco',\n",
        "  'happy',\n",
-       "  1.0]]"
+       "  1.0,\n",
+       "  0.2,\n",
+       "  0.22]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -1441,7 +1461,7 @@
      "text": [
       "Tacotron2(\n",
       "  (speaker_embedding): Embedding(2, 64)\n",
-      "  (prosodic_linear): Linear(in_features=1, out_features=64, bias=False)\n",
+      "  (prosodic_linear): Linear(in_features=3, out_features=64, bias=False)\n",
       "  (embedding): Embedding(217, 512, padding_idx=0)\n",
       "  (encoder): Encoder(\n",
       "    (convolutions): ModuleList(\n",
@@ -1590,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1599,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1689,14 +1709,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrou pitch\n"
+      "entrou pitch\n",
+      "entrou sr\n",
+      "entrou energy\n"
      ]
     }
    ],
@@ -1720,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1833,11 +1855,11 @@
        "  'happy',\n",
        "  'happy'],\n",
        " [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0],\n",
-       " None,\n",
-       " None)"
+       " [0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2],\n",
+       " [0.22, 0.22, 0.22, 0.22, 0.22, 0.22, 0.22, 0.22, 0.22])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
