--- a/Testing summing embeddings.ipynb
+++ b/Testing summing embeddings.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entered None\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = model.inference(inputs, speaker_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[ 0.2762,  0.3342, -0.2501,  ...,  0.0106, -0.0244, -0.2606],\n",
+       "          [-0.0091,  0.0212, -0.0278,  ...,  0.2481, -0.1136, -0.1236],\n",
+       "          [-0.1327,  0.0782, -0.2828,  ...,  0.3306,  0.0007,  0.1216],\n",
+       "          ...,\n",
+       "          [-0.1022, -0.0079,  0.0350,  ...,  0.0443, -0.0281, -0.1475],\n",
+       "          [-0.1101, -0.2710, -0.2979,  ...,  0.4224,  0.1402, -0.0630],\n",
+       "          [-0.0688,  0.0957, -0.0676,  ..., -0.0589, -0.2888, -0.0222]]],\n",
+       "        device='cuda:0'),\n",
+       " tensor([[[ 2.7623e-01,  3.3417e-01, -2.5013e-01,  ...,  1.6349e+00,\n",
+       "           -2.4422e-02, -2.6056e-01],\n",
+       "          [-4.6211e+00,  2.1195e-02, -2.4959e-01,  ...,  2.4815e-01,\n",
+       "            2.8291e+00, -1.2356e-01],\n",
+       "          [-2.2278e+00,  5.0520e-01,  1.6054e+00,  ..., -8.8556e-01,\n",
+       "            6.8603e-04,  1.5414e+00],\n",
+       "          ...,\n",
+       "          [-1.0224e-01,  4.1707e+00,  3.7452e-02,  ...,  4.4334e-02,\n",
+       "           -2.8128e-02,  1.6176e+00],\n",
+       "          [-5.4382e-01, -9.3915e-01, -2.9789e-01,  ...,  4.2243e-01,\n",
+       "            1.4017e-01, -2.0598e+00],\n",
+       "          [-6.8827e-02, -1.4771e+00,  4.2326e-01,  ..., -3.7502e-01,\n",
+       "            5.1458e-01, -2.2224e-02]]], device='cuda:0'),\n",
+       " tensor([[[0.0090, 0.0082, 0.0087, 0.0063, 0.0082, 0.0072, 0.0072, 0.0075,\n",
+       "           0.0075, 0.0091, 0.0082, 0.0079, 0.0076, 0.0084, 0.0075, 0.0090,\n",
+       "           0.0082, 0.0084, 0.0084, 0.0074, 0.0084, 0.0094, 0.0075, 0.0092,\n",
+       "           0.0073, 0.0071, 0.0078, 0.0076, 0.0071, 0.0088, 0.0078, 0.0078,\n",
+       "           0.0082, 0.0076, 0.0084, 0.0098, 0.0092, 0.0088, 0.0085, 0.0086,\n",
+       "           0.0099, 0.0092, 0.0093, 0.0088, 0.0093, 0.0095, 0.0087, 0.0086,\n",
+       "           0.0086, 0.0091, 0.0094, 0.0072, 0.0076, 0.0085, 0.0083, 0.0060,\n",
+       "           0.0074, 0.0091, 0.0088, 0.0103, 0.0091, 0.0085, 0.0093, 0.0081,\n",
+       "           0.0077, 0.0088, 0.0085, 0.0087, 0.0096, 0.0090, 0.0083, 0.0082,\n",
+       "           0.0085, 0.0090, 0.0085, 0.0083, 0.0074, 0.0087, 0.0083, 0.0068,\n",
+       "           0.0069, 0.0083, 0.0078, 0.0080, 0.0083, 0.0103, 0.0087, 0.0087,\n",
+       "           0.0088, 0.0083, 0.0088, 0.0080, 0.0077, 0.0080, 0.0081, 0.0076,\n",
+       "           0.0062, 0.0073, 0.0078, 0.0094, 0.0083, 0.0086, 0.0092, 0.0082,\n",
+       "           0.0094, 0.0108, 0.0104, 0.0095, 0.0089, 0.0077, 0.0075, 0.0070,\n",
+       "           0.0073, 0.0080, 0.0071, 0.0074, 0.0087, 0.0086, 0.0082, 0.0083],\n",
+       "          [0.0091, 0.0082, 0.0087, 0.0063, 0.0082, 0.0072, 0.0072, 0.0075,\n",
+       "           0.0075, 0.0091, 0.0082, 0.0080, 0.0076, 0.0084, 0.0075, 0.0090,\n",
+       "           0.0081, 0.0083, 0.0084, 0.0074, 0.0083, 0.0094, 0.0075, 0.0092,\n",
+       "           0.0073, 0.0070, 0.0078, 0.0076, 0.0070, 0.0088, 0.0078, 0.0078,\n",
+       "           0.0082, 0.0076, 0.0085, 0.0098, 0.0092, 0.0088, 0.0085, 0.0086,\n",
+       "           0.0100, 0.0092, 0.0093, 0.0089, 0.0093, 0.0095, 0.0087, 0.0086,\n",
+       "           0.0086, 0.0091, 0.0095, 0.0072, 0.0076, 0.0084, 0.0082, 0.0060,\n",
+       "           0.0073, 0.0091, 0.0088, 0.0103, 0.0091, 0.0084, 0.0093, 0.0081,\n",
+       "           0.0077, 0.0088, 0.0086, 0.0088, 0.0096, 0.0089, 0.0084, 0.0082,\n",
+       "           0.0086, 0.0090, 0.0086, 0.0083, 0.0074, 0.0087, 0.0083, 0.0069,\n",
+       "           0.0069, 0.0083, 0.0078, 0.0080, 0.0083, 0.0103, 0.0087, 0.0087,\n",
+       "           0.0088, 0.0083, 0.0088, 0.0080, 0.0077, 0.0081, 0.0082, 0.0075,\n",
+       "           0.0062, 0.0073, 0.0078, 0.0094, 0.0082, 0.0086, 0.0092, 0.0082,\n",
+       "           0.0095, 0.0109, 0.0104, 0.0095, 0.0089, 0.0077, 0.0075, 0.0070,\n",
+       "           0.0073, 0.0080, 0.0071, 0.0073, 0.0086, 0.0086, 0.0081, 0.0083]]],\n",
+       "        device='cuda:0'),\n",
+       " tensor([[[0.5220],\n",
+       "          [0.5270]]], device='cuda:0'),\n",
+       " None)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +488,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 120, 512])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +517,7 @@
        "torch.Size([1, 1, 512])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +538,7 @@
        "torch.Size([1, 1, 512])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,6 +765,121 @@
    ],
    "source": [
     "! python TTS/bin/train_tts.py --config_path \"./experiments/debug_add_emb/config.json\" --experiment_folder \"./experiments/debug_add_emb/\" --continue_path \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['phoneme_cleaners']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_cleaner = [CONFIG.text_cleaner]\n",
+    "text_cleaner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# s = '''Um professor, para se tornar doutor, investe, pelo menos, 8 anos de sua vida ( se partir da graduação direto pro doutorado). Se fizer graduação, mestrado e doutorado, são 10 anos. Se fizer graduação, especialização, mestrado e doutorado, lá se vão 12 anos. Sim, 12 anos de universidade. Todo esse tempo labutando com ensino, pesquisa e extensão. Produzindo, apresentando e publicando trabalhos.  Participando de debates e congressos. Dando aula. Ministrando cursos. Participando de bancas. Emitindo pareceres. Orientando artigos, projetos de conclusão de cursos, TCC's e etc, etc, etc. De repente, todo esse conhecimento arduamente produzido dentro dos parâmetros científicos e acadêmicos passa a não valer  nada ante a palavra de um esquizóide qualquer que define a forma como nós, professores, devemos conduzir o trabalho para o qual nos preparamos ao longo da vida e diuturnamente - pesquisando e estudando métodos e teorias, produzindo e submetendo nossas ideias à comunidade científica - que, todos sabemos, não é muito conhecida pela generosidade. Sem comentar os diversos perrengues -  familiares, socioemocionais, financeiros e de saúde -  que enfrentamos durante e  em virtude dessa caminhada extenuante e tão mal recompensada. Ainda assim, contra tudo e todos, persistimos cantando no mal tempo, porque temos a certeza daquilo que fazemos, e assentamos nossa autoridade e dignidade no conhecimento que produzimos. \n",
+    "# Antes, a violência que se abatia sobre nós, profissionais da educação, era apenas financeira e a desvalorização social era decorrente dessa desvalorização financeira: '' Você é só uma professorazinha, ganha pouco''. \n",
+    "# Agora, a violência é pior: a palavra e a autoridade intelectual do professor -  que ainda mantínhamos, apesar de tudo -  são jogados por terra. \n",
+    "# Somos confrontados por pessoas que não leem, não têm conhecimento de absolutamente nada e que se informam apenas por youtubers, líderes religiosos delirantes ou figuras obscuras sem nenhum (re)conhecimento científico e que são  merecidamente proscritas do meio acadêmico.  Ainda por cima, somos chamados de '' doutrinadores'', acusados e vilipendiados das piores formas possíveis sem que os difamadores se retratem ou sofram as devidas punições por suas afirmações criminosas que têm como intuito deslegitimar, mais uma vez, a profissão docente nos violentando moralmente. E, como se não bastasse, há ''professores'' que se alinham a esse  evidente projeto de destruição da educação no país. Não me admira que a profissão esteja entre as menos procuradas pelos jovens, e que esteja, infelizmente, caminhando para a extinção.'''\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "s = \"ambulantes vendem os ingressos para a copa do mundo de dois mil e catorze , mas só alguns dias antes do dia do sorteio .\"\n",
+    "\n",
+    "# s = \"e é\"\n",
+    "\n",
+    "seq = np.asarray(text_to_sequence(s, text_cleaner), dtype=np.int32)\n",
+    "chars_var = torch.from_numpy(seq).unsqueeze(0).cuda()\n",
+    "\n",
+    "# style_wav = {'1': 0.3} # Parece um token interessante\n",
+    "\n",
+    "# f = 0.1\n",
+    "# style_wav = {}\n",
+    "# n_tokens = 3\n",
+    "# for i in range(n_tokens):\n",
+    "#     style_wav[str(i)] = f\n",
+    "\n",
+    "style_wav = './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav'\n",
+    "\n",
+    "speaker_embedding = None\n",
+    "speaker_id = 2\n",
+    "\n",
+    "\n",
+    "# style_wav = None\n",
+    "\n",
+    "use_cuda = True\n",
+    "\n",
+    "wav, alignment, decoder_output, postnet_output, stop_tokens, _, logits = synthesis(\n",
+    "    model.cuda(),\n",
+    "    s,\n",
+    "    CONFIG,\n",
+    "    use_cuda,\n",
+    "    ap,\n",
+    "    speaker_id=speaker_id,\n",
+    "    speaker_embedding=speaker_embedding,\n",
+    "    style_wav=style_wav,\n",
+    "    truncated=False,\n",
+    "    enable_eos_bos_chars=CONFIG.enable_eos_bos_chars, #pylint: disable=unused-argument\n",
+    "    use_griffin_lim=True,\n",
+    "    do_trim_silence=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5120,)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wav.shape"
    ]
   },
   {
