--- a/Testing summing embeddings.ipynb
+++ b/Testing summing embeddings.ipynb
@@ -384,6 +384,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oi\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1: \n",
+    "    print('oi')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
